fix unexpected issue with service list icon from fit content to 1rem as it was not displaying correctly on mobile

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -49,7 +49,7 @@
 .service_list-icon {
     color: var(--color-primary);
     margin-top: 2px;
-    min-width: fit-content;
+    min-width: 1rem;
 }
 
 .service_list p {
